--- a/HTML-5_CSS-3/Cours/1-Introduction/LesListes/style.css
+++ b/HTML-5_CSS-3/Cours/1-Introduction/LesListes/style.css
@@ -1,3 +1,20 @@
-body{
+/* body{
     text-align:center;
+} */
+li{
+    list-style-position: outside;
 }
+.imgRouge{
+    list-style-image: url(../§§§IMG§§§/puce_rouge_1.png);
+}
+.imgOrange{
+    list-style-image: url(../§§§IMG§§§/puce_orange_1.png);
+}
+.imgVert{
+    list-style-image: url(../§§§IMG§§§/puce_verte_1.png);
+}
+
+.fontStyle{
+    list-style-type:lower-latin;
+}
+
