Ajout Checkbox CSS

--- a/HTML-5_CSS-3/Cours/1-Introduction/LesFormulaires/style.css
+++ b/HTML-5_CSS-3/Cours/1-Introduction/LesFormulaires/style.css
@@ -12,3 +12,78 @@ body{
 .space{
     margin:10px;
 }
+.ck_label {
+    display: inline-block;
+    width: 50px;
+    height: 20px;
+    cursor: pointer;
+    position: relative;
+}
+
+/* Cacher le bouton checkbox */
+
+.btn_chb {
+    display: none;
+}
+
+/* mettre tous les éléments "span" frères du bouton checkbox en inline-block pour pouvoir les aligner et changer leurs dimensions    */
+
+.btn_chb~span {
+    display: inline-block;
+    width: 50px;
+    height: 20px;
+    color: white;
+    border-radius: 20px;
+    vertical-align: middle;
+    opacity: 0.7;
+    font-size: 0.7em;
+    line-height:1.9em;
+    font-weight: bold;
+    /* positionner tous les span par rapport à leurs parent "label" */
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+/* Style initial du span Non*/
+
+#snon {
+    background: #e74c3c;
+    text-align: right;    
+    padding-right:6px;
+    transition: all 0.5s ease;
+}
+
+/* Style initial du span "OUI", avec "opacity=0" pour le rendre invisible*/
+
+#soui {
+    background: #2ecc71;
+    text-align: left;    
+    padding-left:6px;
+    opacity: 0;
+    transition: all 0.5s ease;
+}
+
+/* style du petit span rond */
+
+#round {
+    width: 20px;
+    height: 20px;
+    top: auto;
+    border-radius: 40px;
+    background: white;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+    opacity: 1;
+    transition: all 0.5s ease;
+}
+
+/* Après changement de l’état du checkbox en "checked" par le clic
+de l'utilisateur, on déplace le span rond et on affiche le span "OUI"  */
+
+.btn_chb:checked~#round {
+    left: 36px;
+}
+
+.btn_chb:checked~#soui {
+    opacity: 1;
+}
