Push avant NavBar

--- a/HTML-5_CSS-3/Cours/7-Bootstrap/style.css
+++ b/HTML-5_CSS-3/Cours/7-Bootstrap/style.css
@@ -15,3 +15,21 @@ body{
     margin-top: 10px;
     margin-bottom: 10px;
 }
+.red{
+    background-color: red;
+}
+.blue{
+    background-color: blue;
+}
+.green{
+    background-color: green;
+}
+.purple{
+    background-color: purple;
+}
+.yellow{
+    background-color: yellow;
+}
+.pink{
+    background-color: pink;
+}
