--- a/nodejs/cours-express-ejs/views/partials/header.ejs
+++ b/nodejs/cours-express-ejs/views/partials/header.ejs
@@ -19,5 +19,8 @@
             <li class="nav-item">
                 <a class="nav-link" href="/contact">Contact</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/users">Utilisateurs</a>
+            </li>
         </nav>
     </header>
