--- a/nodejs/cours-express-ejs/views/html/user.ejs
+++ b/nodejs/cours-express-ejs/views/html/user.ejs
@@ -1,13 +1,20 @@
 <%- include("../partials/header.ejs"); %>
     </header>
     <main class="container">
-        <h1>L'utilisateur N° <%= id %></h1>
-        
-        <div>
-            Nom: <%= user.firstName %>
-        </div>
-        <div>
-            Prénom: <%= user.lastName %>
-        </div>
+        <% if(user !=undefined) { %>
+            <h1>L'utilisateur N° <%= id %>
+            </h1>
+
+            <div>
+                Nom: <%= user.firstName %>
+            </div>
+            <div>
+                Prénom: <%= user.lastName %>
+            </div>
+        <% } else { %>
+            <div class="alert alert-danger">
+                Aucun utilisateur avec cet id
+            </div>
+        <% } %>
     </main>
-<%- include("../partials/footer.ejs"); %>
+    <%- include("../partials/footer.ejs"); %>
