correction ajout produit nodejs

--- a/nodejs/correction-panier-nodejes-express/views/pages/products.ejs
+++ b/nodejs/correction-panier-nodejes-express/views/pages/products.ejs
@@ -1,5 +1,8 @@
 <%- include('../partials/header') %>
     <div class="row m-1">
+      <a href="/formProduct" class="col btn btn-danger">Ajouter un produit</a>
+    </div>
+    <div class="row m-1">
         <h1 class="col">Liste des produits</h1>
     </div>
 
