--- a/nodejs/correction-panier-nodejes-express/views/pages/products.ejs
+++ b/nodejs/correction-panier-nodejes-express/views/pages/products.ejs
@@ -25,6 +25,7 @@
             <td><%= products[i].category %></td> 
             <td>
                 <a href="/product/<%= i %>" class="btn btn-primary p-1 m-1">detail</a>
+                <a href="/formProduct/<%= i %>" class="btn btn-secondary p-1 m-1">edit</a>
                 <a href="/deleteproduct/<%= i %>" class="btn btn-danger p-1 m-1">delete</a>
             </td>           
           </tr>
