--- a/nodejs/correction-panier-nodejes-express/views/pages/products.ejs
+++ b/nodejs/correction-panier-nodejes-express/views/pages/products.ejs
@@ -5,7 +5,10 @@
     <div class="row m-1">
         <h1 class="col">Liste des produits</h1>
     </div>
-
+    <form class="row m-1">
+      <div class=" col-lg-7"><input type="text" name="search" placeholder="Votre recherche..." class="form-control p-1" /></div>
+      <button class="col-lg-4 p-1 btn btn-default">Rechercher</button>
+    </form>
     <table class="table">
         <thead>
           <tr>
