ajout ApiBitcoin correction

--- a/React/Cours/1-Introduction/6-ApiBitCoin/bitcoin-api/src/App.css
+++ b/React/Cours/1-Introduction/6-ApiBitCoin/bitcoin-api/src/App.css
@@ -1,38 +1,21 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.chart {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.price-container {
+  display: flex;
+  justify-content: space-around;
+  align-Items: center;
+  width: 600;
+  height: 300;
+  margin: 20px 0;
+}
+.nav{
+  padding: 15px;
+  background-color: orangered;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.titre{
+  margin:25px;
 }
