correction xaml calculatrice

--- a/DotNET/FormationDotNet/CoursWPF/FirstWindow.xaml
+++ b/DotNET/FormationDotNet/CoursWPF/FirstWindow.xaml
@@ -30,7 +30,7 @@
             <RowDefinition Height="3*"></RowDefinition> 
         </Grid.RowDefinitions>
         
-        <Button x:Name="b1" Content="b1" Grid.Column="1" Grid.Row="1" Background="#FFEC3333"></Button>
-        <Button x:Name="b2" Content="b2" Grid.Column="0" Grid.Row="0"></Button>
+        <Button x:Name="b1" Content="b1" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" Background="#FFEC3333"></Button>
+        <Button x:Name="b2" Grid.RowSpan="2" Content="b2" Grid.Column="0" Grid.Row="0"></Button>
     </Grid>
 </Window>
