--- a/DotNET/FormationDotNet/CoursWPF/FirstWindow.xaml
+++ b/DotNET/FormationDotNet/CoursWPF/FirstWindow.xaml
@@ -18,8 +18,8 @@
             <Button>b6</Button>
         </StackPanel>
     </StackPanel>-->
-    <!--<Grid>
-        <Grid.ColumnDefinitions>
+    <Grid x:Name="maGrille">
+        <!--<Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"></ColumnDefinition>
             <ColumnDefinition Width="3*"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -31,6 +31,6 @@
         </Grid.RowDefinitions>
         
         <Button x:Name="b1" Content="b1" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" Background="#FFEC3333"></Button>
-        <Button x:Name="b2" Grid.RowSpan="2" Content="b2" Grid.Column="0" Grid.Row="0"></Button>
-    </Grid>-->
+        <Button x:Name="b2" Grid.RowSpan="2" Content="b2" Grid.Column="0" Grid.Row="0"></Button>-->
+    </Grid>
 </Window>
