--- a/DotNET/FormationDotNet/CoursWPF/FirstWindow.xaml
+++ b/DotNET/FormationDotNet/CoursWPF/FirstWindow.xaml
@@ -8,7 +8,7 @@
         Title="FirstWindow" Height="450" Width="800">
     <StackPanel>
         <Label  x:Name="l1" Content="toto"></Label>
-        <Button Click="MethodeClick">b1</Button>
+        <Button MouseEnter="MethodeClick" Click="MethodeClick">b1</Button>
         <Button Click="MethodeClick" >b2</Button>
         <StackPanel Orientation="Horizontal">
             <Button x:Name="b3">b3</Button>
