--- a/DotNET/FormationDotNet/CoursWPF/App.xaml
+++ b/DotNET/FormationDotNet/CoursWPF/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CoursWPF"
-             StartupUri="Calculatrice.xaml">
+             StartupUri="VoitureWindow.xaml">
     <Application.Resources>
         
     </Application.Resources>
