suite cours wpf

--- a/DotNET/FormationDotNet/PersonneWPF/MainWindow.xaml
+++ b/DotNET/FormationDotNet/PersonneWPF/MainWindow.xaml
@@ -18,7 +18,7 @@
         <Label Content="Email : " HorizontalAlignment="Left" Margin="1,117,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="email" HorizontalAlignment="Left" Margin="58,121,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <Button Click="AjouterPersonne" Content="Ajouter" HorizontalAlignment="Left" Margin="10,148,0,0" VerticalAlignment="Top" Width="168"/>
-        <ListBox x:Name="listBoxPersonne" Margin="10,184,601,10" />
+        <ListBox SelectionMode="Multiple" x:Name="listBoxPersonne" Margin="10,184,601,10" />
 
     </Grid>
 </Window>
