--- a/DotNET/FormationDotNet/CoursWPF/VoitureWindow.xaml
+++ b/DotNET/FormationDotNet/CoursWPF/VoitureWindow.xaml
@@ -12,7 +12,16 @@
         <Label Content="Model : " HorizontalAlignment="Left" Margin="24,69,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.079,0.175"/>
         <TextBox x:Name="model" HorizontalAlignment="Left" Margin="89,73,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <Button Click="ValidClick" Content="Valider" HorizontalAlignment="Left" Margin="24,114,0,0" VerticalAlignment="Top" Width="185"/>
-        <ListBox x:Name="maListeVoiture" Margin="0,182,591,97" />
+        <ListBox SelectionMode="Multiple" x:Name="maListeVoiture" Margin="0,182,591,97" />
+        <Button Click="EditClick" Content="Modifier" HorizontalAlignment="Left" Margin="0,348,0,0" VerticalAlignment="Top" Width="209"/>
+        <ListView x:Name="listViewVoiture" Margin="240,16,26,66">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn DisplayMemberBinding="{Binding Model}"  Header="Model" Width="250"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding Marque}" Header="Marque" Width="250"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
 
     </Grid>
 </Window>
