--- a/DotNET/FormationDotNet/PersonneWPF/MainWindow.xaml
+++ b/DotNET/FormationDotNet/PersonneWPF/MainWindow.xaml
@@ -32,6 +32,7 @@
         </ListView>
         <Button Content="Supprimer" Click="DeleteClick" HorizontalAlignment="Left" Margin="204,0,0,0" VerticalAlignment="Center" Height="50" Width="285"/>
         <Button Content="Modifier" Click="EditClick" HorizontalAlignment="Left" Margin="494,0,0,0" VerticalAlignment="Center" Height="50" Width="296"/>
+        <Button Click="DetailClick" Content="Detail" HorizontalAlignment="Left" Margin="204,266,0,0" VerticalAlignment="Top" Height="38" Width="586"/>
 
     </Grid>
 </Window>
