--- a/DotNET/FormationDotNet/FormationUserControl/MainWindow.xaml
+++ b/DotNET/FormationDotNet/FormationUserControl/MainWindow.xaml
@@ -11,5 +11,8 @@
         <control:Product Title="produit 1" Visibility="Hidden" Price="10"></control:Product>
         <control:Product Title="produit 2" Visibility="Visible"  IsEnabled="True" Price="100"></control:Product>
         <Label Content="Other content"></Label>
+        <ComboBox BorderBrush="#FFDC1D1D" Background="#FFFF1818" >
+            <ComboBoxItem Content="test"></ComboBoxItem>
+        </ComboBox>
     </StackPanel>
 </Window>
