--- a/DotNET/FormationDotNet/ContactAspNetCore/Views/Contact/List.cshtml
+++ b/DotNET/FormationDotNet/ContactAspNetCore/Views/Contact/List.cshtml
@@ -1,3 +1,8 @@
-﻿<div>
+﻿@{
+    //Layout = "~Views/Shared/_SpecialLayout.cshtml";
+    Layout = "_SpecialLayout";
+}
+
+<div>
     <h1>Liste des contacts</h1>
 </div>
