suite cours asp.net core

--- a/DotNET/FormationDotNet/ContactAspNetCore/Views/Contact/List.cshtml
+++ b/DotNET/FormationDotNet/ContactAspNetCore/Views/Contact/List.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     //Layout = "~Views/Shared/_SpecialLayout.cshtml";
-    Layout = "_SpecialLayout";
+    //Layout = "_SpecialLayout";
 }
 
 <div>
