--- a/DotNET/FormationDotNet/ContactAspNetCore/Views/Shared/_SpecialLayout.cshtml
+++ b/DotNET/FormationDotNet/ContactAspNetCore/Views/Shared/_SpecialLayout.cshtml
@@ -8,6 +8,10 @@
             <li class="col">
                 <a asp-controller="Contact" asp-action="List">Liste</a>
             </li>
+            <li class="col">
+                <a asp-controller="Contact" asp-action="Form">Formulaire de contact</a>
+            </li>
+            
         </nav>
     </header>
     @RenderBody()
