--- a/DotNET/FormationDotNet/ContactAspNetCore/Views/Shared/_SpecialLayout.cshtml
+++ b/DotNET/FormationDotNet/ContactAspNetCore/Views/Shared/_SpecialLayout.cshtml
@@ -1,5 +1,6 @@
 ﻿<!Doctype html>
 <head>
+    <title>@ViewData["title"]</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 <body>
