--- a/DotNET/FormationDotNet/ContactAspNetCore/Views/_ViewImports.cshtml
+++ b/DotNET/FormationDotNet/ContactAspNetCore/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ContactAspNetCore
 @using ContactAspNetCore.Models
+@using CoursEFCore.Classes
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
