--- a/DotNET/FormationDotNet/FormationAspNetCoreMVC/Views/_ViewImports.cshtml
+++ b/DotNET/FormationDotNet/FormationAspNetCoreMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using FormationAspNetCoreMVC
 @using FormationAspNetCoreMVC.Models
+@using FormationAspNetCoreMVC.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
